chore: align docker setup with configurable static storage
Update the backend Dockerfile and docker-compose configuration to honor the STATIC_ROOT environment variable and mount a host directory to /app/static/images. This brings the local Docker deployment in line with the planned Railway volume strategy while preserving the backend’s static file behavior.

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,7 +1,8 @@
 FROM python:3.11-slim
 
 ENV PYTHONDONTWRITEBYTECODE=1 \
-    PYTHONUNBUFFERED=1
+    PYTHONUNBUFFERED=1 \
+    STATIC_ROOT=/app/static
 
 WORKDIR /app
 
@@ -13,4 +14,5 @@ COPY backend ./backend
 EXPOSE 8000
 
 CMD ["uvicorn", "backend.main:app", "--host", "0.0.0.0", "--port", "8000"]
+
 
