--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
   "devDependencies": {
     "@radix-ui/react-slot": "^1.2.4",
     "@tailwindcss/postcss": "^4.2.1",
+    "@types/node": "^25.3.2",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
     "@vitejs/plugin-react-swc": "^3.7.0",
