--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,10 +8,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "clsx": "^2.1.1",
     "lucide-react": "^0.575.0",
     "react": "^18.3.0",
     "react-dom": "^18.3.0",
-    "reactflow": "^11.11.4"
+    "reactflow": "^11.11.4",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@radix-ui/react-slot": "^1.2.4",
