--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,6 +8,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@radix-ui/react-label": "^2.1.8",
+    "@radix-ui/react-select": "^2.2.6",
+    "@radix-ui/react-separator": "^1.1.8",
+    "@radix-ui/react-tabs": "^1.1.13",
     "clsx": "^2.1.1",
     "lucide-react": "^0.575.0",
     "react": "^18.3.0",
